--- a/Tag2/day2.tex
+++ b/Tag2/day2.tex
@@ -35,7 +35,7 @@ Summenzeichens aus:
 Sei $f(x)=x^2+24x+128$ und $g(x)=3x+2$. Ermitteln Sie die Funktionsvorschriften $(f \circ g)(x)$ und $(g \circ f)(x)$ sowie die Definitions- und Bildbereiche von $f, g, f \circ g, g \circ f$ und skizzieren Sie $g$.
 \end{task}
 \begin{task}
-	Warum muss das Polynom $p:\mathbb{R}\to \mathbb{R},x\mapsto -28x^2+177$ zwei Nullstellen haben?
+	Warum muss das Polynom $p:\mathbb{R}\to \mathbb{R},x\mapsto -28x^2+177$ zwei Nullstellen haben? Skizzieren Sie die Funktion.
 \end{task}
 \begin{task}
 \begin{enumerate}
