--- a/Tag2/day2.tex
+++ b/Tag2/day2.tex
@@ -38,6 +38,7 @@ Sei $f(x)=x^2+24x+128$ und $g(x)=3x+2$. Ermitteln Sie die Funktionsvorschriften 
 	Warum muss das Polynom $p:\mathbb{R}\to \mathbb{R},x\mapsto -28x^2+177$ zwei Nullstellen haben? Skizzieren Sie die Funktion.
 \end{task}
 \begin{task}
+Welche der folgenden \"uber $\mathbb{R}$ definierten Funktionen sind periodisch, gerade bzw. ungerade:
 \begin{enumerate}
 	\item $f(x)=(x+8)^2+(x-8)^2$
 	\item $f(x)=(x+8)^3+(x-8)^3$
