added line for cas

--- a/Tag2/day2.tex
+++ b/Tag2/day2.tex
@@ -10,9 +10,10 @@
 \maketitle
 \begin{framed}
 	\noindent \scriptsize
-	\textsc{Symbole und Definitionen:} für $a_1,a_2,...,a_n$ schreiben wir für deren \emph{Summe} $a_1+...+a_n=:\sum_{i=1}^n a_i$ und für deren \emph{Produkt} $a_1\cdot...\cdot a_n =: \prod_{i=1}^n$. Für eine Funktion $f:D\to W,~x\mapsto f(x)$ heißt $D$ \emph{Definitionsbereich} und $W$ \emph{Wertebereich}.
+	\textsc{Symbole und Definitionen:} für $a_1,a_2,...,a_n$ schreiben wir für deren \emph{Summe} $a_1+...+a_n=:\sum_{i=1}^n a_i$ und für deren \emph{Produkt} $a_1\cdot...\cdot a_n =: \prod_{i=1}^n a_i$. Für eine Funktion $f:D\to W,~x\mapsto f(x)$ heißt $D$ \emph{Definitionsbereich} und $W$ \emph{Wertebereich}.
 \end{framed}
 \section*{Aufgaben}
+\textsc{Wichtig:} Wir empfehlen, bei allen Aufgaben, soweit möglich, auf die Benutzung von CAS-Rechner zu verzichten!
 \begin{task}
 An einer Klausur, bei der $40$ Punkte zu erreichen waren und bei der nur ganzzahlige Punkte
 vergeben wurden, nahmen Studenten aus $6$ verschiedenen Studieng\"angen teil. Zum Bestehen
@@ -28,7 +29,7 @@ Summenzeichens aus:
 \end{task}
 \begin{task}
 	Radioaktiver Kohlenstoff $^{14}$C, den man zur Datierung fossiler Funde
-	benutzt, hat eine Halbwertszeit vn etwa $5,776$ Jahren. Berechnen Sie, wie viel
+	benutzt, hat eine Halbwertszeit von etwa $5,776$ Jahren. Berechnen Sie, wie viel
 	von einem Gramm $^{14}$C nach $10 000$ Jahren noch vorhanden ist. Nach wie vielen Jahren ist noch ein Viertel des ursprünglichen Materials vorhanden?
 \end{task}
 \begin{task}
@@ -40,11 +41,12 @@ Sei $f(x)=x^2+24x+128$ und $g(x)=3x+2$. Ermitteln Sie die Funktionsvorschriften 
 \begin{task}
 Welche der folgenden \"uber $\mathbb{R}$ definierten Funktionen sind periodisch, gerade bzw. ungerade:
 \begin{enumerate}
-	\item $f(x)=(x+8)^2+(x-8)^2$
-	\item $f(x)=(x+8)^3+(x-8)^3$
+	\item $a(x)=(x+8)^2+(x-8)^2$
+	\item $b(x)=(x+8)^3+(x-8)^3$
 	\item $f(x)=\sin(x+8)+\sin(x-8)$
-	\item $f(x)=\sin(x+8)-\sin(x-8)$
+	\item $g(x)=\sin(x+8)-\sin(x-8)$
 \end{enumerate}
+Skizzieren Sie zudem die Funktionen $f$ und $g$.
 \end{task}
 \begin{htask}
 	Zeigen Sie, dass die Funktion $f$ mit $f(x)=1+\frac{\sqrt{x}}{\sqrt{x+1}}$, $x \geq 0$ eine Umkehrfunktion besitzt. Ermitteln Sie diese Umkehrfunktion und ihren Definitions- und Bildbereich.
