changed some stuff

--- a/Tag2/day2.tex
+++ b/Tag2/day2.tex
@@ -33,7 +33,7 @@ Summenzeichens aus:
 	von einem Gramm $^{14}$C nach $10 000$ Jahren noch vorhanden ist. Nach wie vielen Jahren ist noch ein Viertel des ursprünglichen Materials vorhanden?
 \end{task}
 \begin{task}
-Sei $f(x)=x^2+24x+128$ und $g(x)=3x+2$. Ermitteln Sie die Funktionsvorschriften $(f \circ g)(x)$ und $(g \circ f)(x)$ sowie die Definitions- und Bildbereiche von $f, g, f \circ g, g \circ f$ und skizzieren Sie $g$.
+Sei $f(x)=x^2+24x+128$ und $g(x)=3x+2$. Ermitteln Sie die Funktionsvorschriften $(f \circ g)(x)$ und $(g \circ f)(x)$ sowie die Definitions- und Wertebereich von $f, g, f \circ g, g \circ f$, skizzieren Sie $g$ und geben sie zusätzlich den Bildbereich von $g$ an. 
 \end{task}
 \begin{task}
 	Warum muss das Polynom $p:\mathbb{R}\to \mathbb{R},x\mapsto -28x^2+177$ zwei Nullstellen haben? Skizzieren Sie die Funktion.
@@ -42,11 +42,11 @@ Sei $f(x)=x^2+24x+128$ und $g(x)=3x+2$. Ermitteln Sie die Funktionsvorschriften 
 Welche der folgenden \"uber $\mathbb{R}$ definierten Funktionen sind periodisch, gerade bzw. ungerade:
 \begin{enumerate}
 	\item $a(x)=(x+8)^2+(x-8)^2$
-	\item $b(x)=(x+8)^3+(x-8)^3$
-	\item $f(x)=\sin(x+8)+\sin(x-8)$
-	\item $g(x)=\sin(x+8)-\sin(x-8)$
+	\item $b(x)=(x+8)^3-(x-8)^3$
+	\item $f(x) = 3\sin(x)+2$
+	\item $g(x)=\sin(x+8)+\sin(x-8)$
 \end{enumerate}
-Skizzieren Sie zudem die Funktionen $f$ und $g$.
+Skizzieren Sie zudem die Funktion $f$.
 \end{task}
 \begin{htask}
 	Zeigen Sie, dass die Funktion $f$ mit $f(x)=1+\frac{\sqrt{x}}{\sqrt{x+1}}$, $x \geq 0$ eine Umkehrfunktion besitzt. Ermitteln Sie diese Umkehrfunktion und ihren Definitions- und Bildbereich.
