changed again some tasks

--- a/Tag2/day2.tex
+++ b/Tag2/day2.tex
@@ -33,7 +33,7 @@ Summenzeichens aus:
 	von einem Gramm $^{14}$C nach $10 000$ Jahren noch vorhanden ist. Nach wie vielen Jahren ist noch ein Viertel des ursprünglichen Materials vorhanden?
 \end{task}
 \begin{task}
-Sei $f(x)=x^2+24x+128$ und $g(x)=3x+2$. Ermitteln Sie die Funktionsvorschriften $(f \circ g)(x)$ und $(g \circ f)(x)$ sowie die Definitions- und Wertebereich von $f, g, f \circ g, g \circ f$, skizzieren Sie $g$ und geben sie zusätzlich den Bildbereich von $g$ an. 
+Sei $f(x)=x^2+24x+128$ und $g(x)=3x+2$. Ermitteln Sie die Funktionsvorschriften $(f \circ g)(x)$ und $(g \circ f)(x)$ sowie die Definitions- und Wertebereich von $f, g, f \circ g, g \circ f$, skizzieren Sie $g$ und geben sie zusätzlich den Bildbereich von $g$ und $f\circ g$ an. 
 \end{task}
 \begin{task}
 	Warum muss das Polynom $p:\mathbb{R}\to \mathbb{R},x\mapsto -28x^2+177$ zwei Nullstellen haben? Skizzieren Sie die Funktion.
