--- a/Tag2/day2.tex
+++ b/Tag2/day2.tex
@@ -20,7 +20,7 @@ vergeben wurden, nahmen Studenten aus $6$ verschiedenen Studieng\"angen teil. Zu
 waren $16$ Punkte erforderlich. Es bezeichne $a_{ij}$ die Anzahl der Studenten des Studienganges
 $i$ ($i = 1, 2, . . ., 6$), die $j$ Punkte erreichten. Dr\"ucken Sie folgende Sachverhalte mithilfe des
 Summenzeichens aus:
-\begin{enumerate}
+\begin{enumerate}[i)]
 	\item An der Klausur nahmen insgesamt $411$ Studenten teil.
 	\item $222$ Teilnehmer haben die Klausur nicht bestanden.
 	\item $3$ Klausurteilnehmer schafften keinen einzigen Punkt.
@@ -40,7 +40,7 @@ Sei $f(x)=x^2+24x+128$ und $g(x)=3x+2$. Ermitteln Sie die Funktionsvorschriften 
 \end{task}
 \begin{task}
 Welche der folgenden \"uber $\mathbb{R}$ definierten Funktionen sind periodisch, gerade bzw. ungerade:
-\begin{enumerate}
+\begin{enumerate}[i)]
 	\item $a(x)=(x+8)^2+(x-8)^2$
 	\item $b(x)=(x+8)^3-(x-8)^3$
 	\item $f(x) = 3\sin(x)+2$
