changed even more tasks

--- a/Tag2/day2.tex
+++ b/Tag2/day2.tex
@@ -27,13 +27,15 @@ Summenzeichens aus:
 	\item $43,1 \%$ der Teilnehmer aus dem Studiengang $6$ haben die Klausur nicht bestanden.
 \end{enumerate}
 \end{task}
+\dotfill
 \begin{task}
 	Radioaktiver Kohlenstoff $^{14}$C, den man zur Datierung fossiler Funde
 	benutzt, hat eine Halbwertszeit von etwa $5,776$ Jahren. Berechnen Sie, wie viel
 	von einem Gramm $^{14}$C nach $10 000$ Jahren noch vorhanden ist. Nach wie vielen Jahren ist noch ein Viertel des ursprünglichen Materials vorhanden?
 \end{task}
+\dotfill
 \begin{task}
-Sei $f(x)=x^2+24x+128$ und $g(x)=3x+2$. Ermitteln Sie die Funktionsvorschriften $(f \circ g)(x)$ und $(g \circ f)(x)$ sowie die Definitions- und Wertebereich von $f, g, f \circ g, g \circ f$, skizzieren Sie $g$ und geben sie zusätzlich den Bildbereich von $g$ und $f\circ g$ an. 
+Sei $f(x)=x^2+24x+128$ und $g(x)=3x+2$. Ermitteln Sie die Funktionsvorschriften $(f \circ g)(x)$ und $(g \circ f)(x)$ sowie die Definitions- und Wertebereiche von $f, g, f \circ g, g \circ f$, skizzieren Sie $g$ und geben sie zusätzlich den Bildbereich von $g$ und $f\circ g$ an. 
 \end{task}
 \begin{task}
 	Warum muss das Polynom $p:\mathbb{R}\to \mathbb{R},x\mapsto -28x^2+177$ zwei Nullstellen haben? Skizzieren Sie die Funktion.
@@ -43,7 +45,7 @@ Welche der folgenden \"uber $\mathbb{R}$ definierten Funktionen sind periodisch,
 \begin{enumerate}[i)]
 	\item $a(x)=(x+8)^2+(x-8)^2$
 	\item $b(x)=(x+8)^3-(x-8)^3$
-	\item $f(x) = 3\sin(x)+2$
+	\item $f(x) = 3\cos(x)+2$
 	\item $g(x)=\sin(x+8)+\sin(x-8)$
 \end{enumerate}
 Skizzieren Sie zudem die Funktion $f$.
