added the new tasks for tomorrow

--- a/Tag2/day2.tex
+++ b/Tag2/day2.tex
@@ -13,7 +13,7 @@
 	\textsc{Symbole und Definitionen:} für $a_1,a_2,...,a_n$ schreiben wir für deren \emph{Summe} $a_1+...+a_n=:\sum_{i=1}^n a_i$ und für deren \emph{Produkt} $a_1\cdot...\cdot a_n =: \prod_{i=1}^n a_i$. Für eine Funktion $f:D\to W,~x\mapsto f(x)$ heißt $D$ \emph{Definitionsbereich} und $W$ \emph{Wertebereich}.
 \end{framed}
 \section*{Aufgaben}
-\textsc{Wichtig:} Wir empfehlen, bei allen Aufgaben, soweit möglich, auf die Benutzung von CAS-Rechner zu verzichten!
+\textsc{Wichtig:} Wir empfehlen, bei allen Aufgaben, soweit möglich, auf die Benutzung von CAS-Rechnern zu verzichten!
 \begin{task}
 An einer Klausur, bei der $40$ Punkte zu erreichen waren und bei der nur ganzzahlige Punkte
 vergeben wurden, nahmen Studenten aus $6$ verschiedenen Studieng\"angen teil. Zum Bestehen
@@ -59,7 +59,7 @@ Skizzieren Sie zudem die Funktion $f$.
 \noindent
 \textsc{Hinweise:}\\
 Schwierigere Aufgaben, bei denen man vielleicht auch nicht direkt einen Bezug zur Vorlesung erkennt, sind mit einem $\dagger$ gekennzeichnet.\\
-Wir versuchen, die Aufgaben und einige Lösungen unter \url{https://pankratius.github.io} zur Verfügungn zu stellen.
+Wir versuchen, die Aufgaben und einige Lösungen unter \url{https://pankratius.github.io} zur Verfügung zu stellen.
 Viele Aufgaben sind folgender Literatur entnommen:
 \begin{itemize}
 	\item ``Br\"uckenkurs Mathematik f\"ur Studieneinsteiger aller Disziplinen'', G. Walz, F. Zeilfelder, Th. Rie\ss inger, Spektrum Verlag, 1. Auflage, 2005
