added extra task

--- a/Tag3/day3.tex
+++ b/Tag3/day3.tex
@@ -42,6 +42,9 @@
 Ein $4$ cm hoher Gegenstand befindet sich $20$ cm vor eine konvexen Linse mit einer Brennweite von $f=+12$ cm. Bestimmen Sie Lage und H\"ohe des durch die Linse erzeugten Bildes. 
 Erstellen Sie dazu eine geeignete Skizze. Was \"andert sich, wenn sich der Gegenstand nur $10$ cm von der Linse entfernt befindet?
 \end{task}
+\begin{htask}
+	Ermitteln Sie durch Betrachtung der Winkel im gleichseitigen bzw. im gleichsschenkligen rechtwinkligen Dreieck den Sinus, Kosinus und Tangens von $30^\circ$, $45^\circ$ und $60^\circ$!
+\end{htask}
 \hrule
 \vspace{.5cm}
 \noindent
