changed tasks for day 4

--- a/Tag4/day4.tex
+++ b/Tag4/day4.tex
@@ -11,9 +11,14 @@
 \section*{Aufgaben}
 \textsc{Wichtig:} Wir empfehlen, bei allen Aufgaben, soweit möglich, auf die Benutzung von CAS-Rechnern zu verzichten!
 \begin{task}
-	Drei Freundinnen wollen einen Wochenendausflug machen und zu diesem Zweck ein Auto mieten.
-	Unternehmen $A$ bietet einen entsprechenden PKW zu einem Gruppenpreis von $80,00$ Euro an zuz\"uglich $0,20$ Euro je gefahrenen $km$, w\"ahrend bei Unternehmen $B$ neben
-	$44,00$ Euro Grundgeb\"uhr $0,35$ Euro je $km$ zu zahlen sind. Bei welchen Fahrstrecken ist es g\"unstiger, bei $A$ zu mieten, und bei welchen Strecken ist $B$ vorteilhafter?
+	Lösen Sie die Gleichungen:
+	\begin{enumerate}[i)]
+		\item $\frac{2x-1}{2-x} = \frac{7}{3x+4}$
+		\item $\frac{x+1}{2x-4} = \frac{x+2}{x-2}$
+	\end{enumerate}
+\end{task}
+\begin{task}
+	Finden Sie alle Nullstellen von $x^4-x^3-31x^2+x+30=0$!
 \end{task}
 \dotfill
 \begin{task}
@@ -29,8 +34,8 @@
 \begin{task}
 Bestimmen Sie die L\"osungen der folgenden Wurzelgleichungen: 
 \begin{enumerate}[i)]
-	\item[a)] $\sqrt{x+4}=\sqrt{x^2+x}$
-	\item[b)] $\sqrt{x}+\sqrt{5-x}=\sqrt{2x+7}$
+	\item $\sqrt{x+4}=\sqrt{x^2+x}$
+	\item $\sqrt{x}+\sqrt{5-x}=\sqrt{2x+7}$
 \end{enumerate}  
 \end{task}
 \hrule
