--- a/Tag4/day4.tex
+++ b/Tag4/day4.tex
@@ -13,6 +13,7 @@
 \begin{task}
 	Lösen Sie die Gleichungen:
 	\begin{enumerate}[i)]
+		\item $\frac{6x-1}{3x+2} = \frac{2x}{x-1}$
 		\item $\frac{2x-1}{2-x} = \frac{7}{3x+4}$
 		\item $\frac{x+1}{2x-4} = \frac{x+2}{x-2}$
 	\end{enumerate}
