added one more task

--- a/Tag5/day5.tex
+++ b/Tag5/day5.tex
@@ -17,8 +17,15 @@
 		\item $2x+1<3x-5$
 		\item $2(x+1)(x-2)<2x^2+5$
 		\item $|2x-4|<8$
+		\item $|x-4|+|x+8|<24$
 	\end{enumerate}
 \end{task}
+\begin{task}
+	Drei Freundinnen wollen einen Wochenendausflug machen und zu diesem Zweck ein Auto mieten.
+	Unternehmen $A$ bietet einen entsprechenden PKW zu einem Gruppenpreis von $80,00$ Euro an zuz\"uglich $0,20$ Euro je gefahrenen $km$, w\"ahrend bei Unternehmen $B$ neben
+	$44,00$ Euro Grundgeb\"uhr $0,35$ Euro je $km$ zu zahlen sind. Bei welchen Fahrstrecken ist es g\"unstiger, bei $A$ zu mieten, und bei welchen Strecken ist $B$ vorteilhafter?
+\end{task}
+\dotfill
 \begin{task}
 	Selllen Sie die Mengen
 	\[
